--- a/my-app/index.html
+++ b/my-app/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>eric-website</title>
+    <title>Eric Qin | Unimelb Med Student & Tutor</title>
+    <meta name="description" content="Personal portfolio of Eric Qin, a Medicine student at the University of Melbourne offering expert tutoring in Medical entry (GAMSAT & interview prep) and high school homework help." />
+    <meta property="og:title" content="Eric Qin | Unimelb Med Student & Tutor" />
+    <meta property="og:description" content="Expert tutoring from a Unimelb Med student. View my portfolio and services." />
   </head>
   <body>
     <div id="root"></div>
