--- a/my-app/index.html
+++ b/my-app/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eric Qin | Unimelb Med Student & Tutor</title>
-    <meta name="description" content="Personal website of Eric Qin, a Medicine student at the University of Melbourne offering tutoring in Medical entry and high school homework help." />
+    <meta name="description" content="Personal website of Eric Qin, a Medicine student at the University of Melbourne offering tutoring in GAMSAT and Interview Preparation." />
     <meta property="og:title" content="Eric Qin | Unimelb Med Student & Tutor" />
-    <meta property="og:description" content="GAMAST and highschool tutoring from a Unimelb Med student. View my portfolio and services." />
+    <meta property="og:description" content="GAMSAT and highschool tutoring from a Unimelb Med student. View my portfolio and services." />
   </head>
   <body>
     <div id="root"></div>
